packages/fuels-macros/tests/ui/abigen/missing_abi_attribute.rs
use fuels_macros::abigen;

abigen!(Contract(name = "SomeName"));

fn main() {}
